@startuml

class PressureMeasurement {
    - measurement_date: date
    - height: float
    - value: int
    + to_row(): tuple
    + to_file_line(): str
}

class PressureParseError {
}

class CommandError {
}

class PressureParser {
    + parse_line(line: str): PressureMeasurement
    + create_measurement(date_text: str, height_text: str, value_text: str): PressureMeasurement
}

class PressureModel {
    - _measurements: list[PressureMeasurement]
    + measurements: list[PressureMeasurement]
    + load_from_file(file_path: Path, log_path: Path): int
    + add_measurement(date_text: str, height_text: str, value_text: str): void
    + add_measurement_object(measurement: PressureMeasurement): void
    + remove_measurement(index: int): void
    + remove_by_condition(condition): int
    + save_to_file(file_path: Path): void
    + get_table_rows(): list
}

class CommandProcessor {
    - model: PressureModel
    - base_dir: Path
    + execute_file(command_path: Path): list
    + execute_line(line: str): str
}

class PressureView {
    - root: Tk
    - model: PressureModel
    - data_path: Path
    - log_path: Path
    - command_processor: CommandProcessor
    + load_data(): void
    + open_command_file(): void
    + update_table(): void
    + add_measurement(): void
    + delete_selected_measurement(): void
}

PressureParser ..> PressureMeasurement
PressureParser ..> PressureParseError
PressureModel o-- PressureMeasurement
PressureModel ..> PressureParser
CommandProcessor --> PressureModel
CommandProcessor ..> CommandError
PressureView --> PressureModel
PressureView --> CommandProcessor

@enduml